--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
